@@ -11,12 +11,12 @@ dfm(x, ...)
 
 \method{dfm}{corpus}(x, feature = c("word"), stem = FALSE,
   stopwords = NULL, bigram = FALSE, groups = NULL, verbose = TRUE,
-  dictionary = NULL, dictionary_regex = FALSE, bootstrap = FALSE,
-  addto = NULL, ...)
+  dictionary = NULL, thesaurus = NULL, dictionary_regex = FALSE,
+  bootstrap = FALSE, addto = NULL, ...)
 
 \method{dfm}{character}(x, feature = c("word"), stem = FALSE,
   stopwords = NULL, bigram = FALSE, verbose = TRUE, dictionary = NULL,
-  dictionary_regex = FALSE, addto = NULL, ...)
+  thesaurus = NULL, dictionary_regex = FALSE, addto = NULL, ...)
 
 is.dfm(x)
 
@@ -45,6 +45,14 @@ no stopwords will be applied.  If "TRUE" then it currently defaults to
 
 \item{dictionary}{A list of character vector dictionary entries, including
 regular expressions (see examples)}
+
+\item{thesaurus}{A list of character vector "thesaurus" entries, in a
+dictionary list format, which can also include regular expressions  if
+\code{dictionary_regex} is \code{TRUE} (see examples).  Note that unlike
+dictionaries, each entry in a thesaurus key must be unique, otherwise only
+the first match in the list will be used.  Thesaurus keys are converted to
+upper case to create a feature label in the dfm, as a reminder that this was
+not a type found in the text, but rather the label of a thesaurus key.}
 
 \item{dictionary_regex}{\code{TRUE} means the dictionary is already in
 regular expression format, otherwise it will be converted from "wildcard"
@@ -94,6 +102,16 @@ mydict <- list(christmas=c("Christmas", "Santa", "holiday"),
                country="united states")
 dictDfm <- dfm(mycorpus, dictionary=mydict)
 print(dictDfm, show.values=TRUE)
+
+## with the thesaurus feature
+mytexts <- c("The new law included a capital gains tax, and an inheritance tax.",
+             "New York City has raised a taxes: an income tax and a sales tax.")
+mydict <- list(tax=c("tax", "income tax", "capital gains tax", "inheritance tax"))
+print(dfm(compoundWords(mytexts, mydict),
+          thesaurus=lapply(mydict, function(x) gsub("\\\\s", "_", x))),
+      show.values=TRUE)
+# pick up "taxes" with "tax" as a regex
+print(dfm(compoundWords(mytexts, mydict), thesaurus=list(anytax="tax"), dictionary_regex=TRUE), TRUE)
 
 ## removing stopwords
 testText <- "The quick brown fox named Seamus jumps over the lazy dog also named Seamus, with
